# backtestgate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  VALIDATION.md  pyproject.toml
.github/ISSUE_TEMPLATE/: real-audit-feedback.yml
.github/workflows/: tests.yml
backtestgate/: __init__.py  __main__.py  audit.py  cli.py  loader.py  models.py  pine_rules.py  report.py  scaffold.py
fixtures/block/: manifest.json  performance.csv  strategy.pine  trades.csv
fixtures/pass/: manifest.json  performance.csv  strategy.pine  trades.csv
fixtures/warn/: manifest.json  performance.csv  strategy.pine  trades.csv
tests/: test_backtestgate.py
