[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "backtestgate"
version = "0.2.0"
description = "Offline trust gate for TradingView Pine backtests"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jiangki" }]
keywords = ["tradingview", "pine-script", "backtest", "linter", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
backtestgate = "backtestgate.cli:main"

[tool.setuptools.packages.find]
include = ["backtestgate*"]
